unpackaged/main/default/objects/CMPL123CME__Investigation_Template_Item__c/CMPL123CME__Investigation_Template_Item__c.object-meta.xml
<CustomObject>
    <label>Investigation Template Item</label>
    <nameField>
        <displayFormat>INV-T-I-{00000}</displayFormat>
        <label>Investigation Template Items No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Investigation Template Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>