unpackaged/main/default/objects/CMPL123CME__Investigation_Template_Item__c/fields/CMPL123CME__Description_URL__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Description_URL__c</fullName>
        <description>Description URL</description>
        <inlineHelpText>Description URL</inlineHelpText>
        <label>Description URL</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>