unpackaged/main/default/objects/CMPL123CME__Investigation_Template_Item__c/fields/CMPL123CME__Field_Type__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Field_Type__c</fullName>
        <label>Field Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Checkbox</fullName>
                </value>
                <value>
                    <fullName>Date</fullName>
                </value>
                <value>
                    <fullName>Datetime</fullName>
                </value>
                <value>
                    <fullName>File</fullName>
                </value>
                <value>
                    <fullName>Number</fullName>
                </value>
                <value>
                    <fullName>Picklist</fullName>
                </value>
                <value>
                    <fullName>Text</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>