unpackaged/main/default/objects/CMPL123CME__Investigation_Template_Item__c/fields/CMPL123CME__Instructions__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Instructions__c</fullName>
        <label>Instruction(s)</label>
        <length>130768</length>
        <type>LongTextArea</type>
    </CustomField>