unpackaged/main/default/objects/CMPL123CME__Investigation_Template_Item__c/fields/CMPL123CME__Investigation_Item_Description__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Investigation_Item_Description__c</fullName>
        <label>Investigation Item Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </CustomField>