unpackaged/main/default/objects/CMPL123CME__Investigation_Template_Item__c/fields/CMPL123CME__Investigation_Item_Value__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Investigation_Item_Value__c</fullName>
        <label>Investigation Item Value</label>
        <length>250</length>
        <type>Text</type>
    </CustomField>