unpackaged/main/default/objects/CMPL123CME__Investigation_Template_Item__c/fields/CMPL123CME__Investigation_Template__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Investigation_Template__c</fullName>
        <label>Investigation Template</label>
        <referenceTo>CMPL123CME__Investigation_Template__c</referenceTo>
        <relationshipLabel>Investigation Template Items</relationshipLabel>
        <relationshipName>Investigation_Template_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>