unpackaged/main/default/objects/CMPL123CME__Investigation_Template_Item__c/fields/CMPL123CME__Item_No__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Item_No__c</fullName>
        <label>Item No</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>