unpackaged/main/default/objects/CMPL123CME__Investigation_Template_Item__c/fields/CMPL123CME__Picklist_Values__c.field-meta.xml
<CustomField>
        <fullName>CMPL123CME__Picklist_Values__c</fullName>
        <inlineHelpText>If Field Type='PickList', provide Picklist Values in comma separated</inlineHelpText>
        <label>Picklist Values</label>
        <type>TextArea</type>
    </CustomField>